[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cavity-designer"
version = "0.1.0"
description = "ABCD/Gaussian-mode optical cavity design helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
cavity-design = "cavity_designer.cli:main"

[tool.setuptools.packages.find]
include = ["cavity_designer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
